# duckdb-bench-damon2026

./: .clang-format  CMakeLists.txt  README.md  download_clickbench.sh  explain.py  generate  generate.py  plot.py  run_all.sh
extension/src/: view_rewriter_extension.cpp
sql/tpch/filtered_queries/: q01.sql  q02.sql  q03.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08.sql  q09.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q19.sql  q20.sql  q21.sql  q22.sql
sql/tpch/filtered_views/: q01.sql  q02.sql  q03.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08.sql  q09.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q19.sql  q20.sql  q21.sql  q22.sql
src/: common.hpp  main.cpp  queries.cpp  throughput.cpp
